--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ a,a:visited {
     position: absolute;
     left: 0px;
     top: 0px;
-    width: 100%;
+    height: 100%;
 }
 .title {
     text-align: center;
