--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,12 @@ body {
 }
 
 p {
-    font-size: 16px;
+    font-size: 24px;
+    line-height: 1.7;
+}
+
+header,footer,section {
+    margin-bottom: 40px;
 }
 
 a,a:visited {
@@ -126,6 +131,7 @@ a,a:visited {
 
 #buttons {
     margin-top: 40px;
+    min-height: 100px;
 }
 .button {
     float: left;
